--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,11 +6,12 @@ branches:
   only:
     - master  # ветка git
 
-build: off  # будем использовать свой скрипт сборки
+build: on  # будем использовать свой скрипт сборки
 
 install:
-  #  не запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-
+  # ##  запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
+  #
+  - source https://github.com/PetrIvChe/Postman-Echo.git
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
