--- a/src/test/resources/.appveyor.yml
+++ b/src/test/resources/.appveyor.yml
@@ -11,8 +11,8 @@ build: off  # будем использовать свой скрипт сбор
 install:
   # ??? запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
 
-  - java -jar ./posmanEcho.jar &
+ # - java -jar ./posmanEcho.jar &
   - chmod +x gradlew
-  -
+
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
