--- a/src/test/resources/.appveyor.yml
+++ b/src/test/resources/.appveyor.yml
@@ -12,5 +12,5 @@ install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-mbank.jar &
 build_script:
-  - chmod +x gradlew
+  #- chmod +x gradlew
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
